objects/smagicinteract__Object_Metadata_Config__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Metadata_Id__c</fullName>
        <label>Metadata Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Metadata_Label__c</fullName>
        <description>stores label of page or button created through interact package.</description>
        <label>Metadata Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Metadata_Type__c</fullName>
        <description>Stores purpose of record. Valid values can be Page or Button.</description>
        <label>Metadata Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Page</fullName>
                </value>
                <value>
                    <fullName>Button</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Parent_Object_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Gives information of parent object for which page or button is created.</description>
        <label>Parent Object Id</label>
        <referenceTo>smagicinteract__Message_Object_Config__c</referenceTo>
        <relationshipLabel>Object Metadata Config</relationshipLabel>
        <relationshipName>Object_Metadata_Config</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Object Metadata Config</label>
    <listViews>
        <fullName>Nolan_Daigle_Object_Metadata_Config</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Metadata Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>